# openfaas-rust-template

./: .gitignore  README.md
template/rust/: Dockerfile  template.yml
template/rust/function/: Cargo.toml
template/rust/function/src/: main.rs
template/rust/source/: Cargo.toml
