[package]
name = "function"
version = "0.1.0"
edition = "2021"
authors = ["Issam Hakimi <xxxx@xxx.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hyper = { version = "0.14.20", features = [ "server", "stream", "runtime", "http1", "http2" ] }
tokio = { version = "1.20.1", features = ["rt", "macros"] }
log = "0.4.17"
env_logger = "0.9.0"
serde_json = "1.0.85"