[package]
name = "function"
version = "0.1.0"
edition = "2021"
authors = ["Issam Hakimi <xxxx@xxx.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rustfaas = { git = "https://github.com/openbackendHQ/rustfaas", tag = "v0.2.0" }
tokio = { version = "1.20.1", features = ["full"] }
log = "0.4.17"
env_logger = "0.9.0"
serde_json = "1.0.85"
serde = { version = "1.0.144", features = ["derive"] }